minio/app/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    argocd.argoproj.io/ignore-healthcheck: "true"
  name: minio-api-ingress
  namespace: minio
spec:
  tls:
    - hosts:
        - api.s3.cloud.traunseenet.com
      secretName: letsencrypt
  ingressClassName: traefik
  rules:
    - host: api.s3.cloud.traunseenet.com
      http:
        paths:
          - backend:
              service:
                name: minio-service
                port:
                  number: 9000
            path: /
            pathType: Prefix
