minio/app/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod-backup"
    argocd.argoproj.io/ignore-healthcheck: "true"
  name: minio-ingress
  namespace: minio
spec:
  tls:
    - hosts:
        - s3.cloud.traunseenet.com
      secretName: letsencrypt-prod
  ingressClassName: traefik
  rules:
    - host: s3.cloud.traunseenet.com
      http:
        paths:
          - backend:
              service:
                name: minio-service
                port:
                  number: 9001
            path: /
            pathType: Prefix
